--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <%= render 'navbar' %>
-
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+<%= javascript_include_tag 'creative/registration' %>
 
 <header id="page-top" class='accounts_header'>
     <div class="header-content">
@@ -10,7 +11,9 @@
                 <p></p>
                 <%= form_for(resource, as: resource_name, validate: true, url: account_registration_path(resource_name)) do |f| %>
                   <%= devise_error_messages! %>
-
+                  <span class="payment-errors"></span>
+                  <input type="hidden" name='payment_token'/><br/>
+                  <input type='hidden' name='stripe_key' value="<%= Rails.application.secrets.stripe_publishable_key %>" /><br>
                   <div class="form-group">
                     <%= f.text_field :full_name, :required => true, placeholder: 'Full Name', class: 'form-control'%>
                   </div>
@@ -18,7 +21,7 @@
                     <%= f.text_field :company, :required => true, placeholder: 'Company', class: 'form-control' %>
                   </div>
                   <div class="form-group">
-                    <%= f.text_field :email, :required => true, placeholder: 'Email', class: 'form-control' %>
+                    <%= f.email_field :email, :required => true, placeholder: 'Email', class: 'form-control' %>
                   </div>
                   <div class="form-group">
                     <%= f.password_field :password, :required => '', placeholder: 'Password', class: 'form-control'  %>
@@ -29,8 +32,21 @@
                   <div class="form-group">
                     <%= f.text_field :mobile_phone, :required => true, placeholder: 'Mobile Phone Number', class: 'form-control' %>
                   </div>
+                  <div class="form-group">
+                    <%= text_field_tag nil,nil, placeholder: 'Card Number', class: 'form-control', id: 'cardNumber' %>
+                  </div>
+                  <div class="form-group">
+                    <%= text_field_tag nil,nil, placeholder: 'CVC', class: 'form-control', id: 'CVC' %>
+                  </div>
+                  <div class="form-group">
+                    <%= text_field_tag nil,nil, placeholder: 'Expiry Month', class: 'form-control', id: 'expMonth' %>
+                  </div>
+                  <div class="form-group">
+                    <%= text_field_tag nil,nil, placeholder: 'Expiry Year', class: 'form-control', id: 'expYear' %>
+                  </div>
                   <br>
-                  <div>
+                  <!-- <div>
+                      <p><input id="submit-btn"></p>
                       <script
                         src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                         data-key= "<%= Rails.application.secrets.stripe_publishable_key %>"
@@ -40,19 +56,18 @@
                         data-allow-remember-me="false"
                         data-locale="auto">
                       </script>
-                  </div>
-                  <br>
+                  </div> -->
                   <div class="row">
                     <div class="col-lg-4 col-lg-offset-4 col-md-2 col-md-offset-5  col-sm-2 col-sm-offset-5 col-xs-6 col-xs-offset-3">
-                    
                     <%= link_to image_tag("accounts/light_solid.png", :class => 'img-responsive'), "https://stripe.com/about"%>
                     </div>
-                    <br><br>
+                    <br>
                   </div>
-                  <!-- <div class="form-group">
+                  <div class="form-group">
                     <%= f.submit 'REGISTER', class: 'page-scroll btn btn-primary btn-lg outline submit-account' %>
-                  </div> -->
+                  </div>
                   <br>
+                  <div id="stripeResponse"></div>
                   <!-- <p style="text-align: center; color: black; font-family: 'ArialRoundedMTBold';font-size: 14px;">We only charge your credit card once a service has been delivered.</p> -->
                   <p style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';font-size: 14px;">
                   <!-- <input type="checkbox" required name="terms"> -->
