removed VAT from receipt and improved the sign up form

--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -27,7 +27,7 @@
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
                 <li id="register_button">
-                    <%= link_to 'SIGN IN', new_account_session_path, class: "page-scroll btn btn-primary btn-lg outline" %>
+                    <%= link_to 'LOG IN', new_account_session_path, class: "page-scroll btn btn-primary btn-lg outline" %>
                 </li>
             </ul>
         </div>
