--- a/app/views/devise/registrations/_navbar.html.erb
+++ b/app/views/devise/registrations/_navbar.html.erb
@@ -27,7 +27,7 @@
                     <a class="page-scroll" href="/#contact">Contact</a>
                 </li>
                 <li id="register_button">
-                    <%= link_to 'SIGN OUT', destroy_account_session_path, method: :delete, class: "page-scroll btn btn-primary btn-lg outline" %>
+                    <%= link_to 'LOG OUT', destroy_account_session_path, method: :delete, class: "page-scroll btn btn-primary btn-lg outline" %>
                 </li>
             </ul>
         </div>
