changed landing for chat button page

--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -215,6 +215,7 @@ header {
 .accounts_header {
     /*background-image: asset-data-url("creative/header.jpg");*/
     background-color: #528BE2;
+    height: auto !important;
 }
 
 header .header-content {
