--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -16,7 +16,7 @@
                       var openNSLauncher = function() {
                       var launcher = document.querySelector('.nudgespot-launcher');
                       launcher.click();
-                      }; 
+                      };
                     </script>
                     <!-- Embed Video as Background-->
                     <div class="container-fluid">
@@ -26,11 +26,13 @@
                     </div>
                     <div class="container-fluid key_text">
                         <h2>Make Everything Work in Your Office</h2>
-                        <!-- <h1 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:+447454574821">07 45 45 74 821</a></h1> -->
                         <br>
+                        <h4>Available on-demand all across London during weekdays from 9AM until 7PM</h4>
+                        <h4>Send us a message to get started</h4>
+                        <!-- <h1 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:+447454574821">07 45 45 74 821</a></h1> -->
+                        <!-- <hr> -->
                         <hr>
-                        <h4>Available on-demand during weekdays from 9AM until 7PM</h4>
-                        <%= link_to 'GET HELP NOW', '#', class: "btn btn-primary btn-xl page-scroll ", onclick:"event.preventDefault();openNSLauncher();"  %>
+                        <%= link_to 'GET INSTANT HELP', '#', class: "btn btn-primary btn-xl page-scroll ", onclick:"event.preventDefault();openNSLauncher();"  %>
 <!--                         <%= link_to 'OPEN AN ACCOUNT - FREE SIGN UP', new_account_registration_path, class: "btn btn-primary btn-xl page-scroll register_button" %>
  -->                    </div>
                 </section>
