--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -26,8 +26,11 @@
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
+                 <li>
+                     <%= link_to 'LOG IN', new_account_session_path %>
+                 </li>
                 <li id="register_button">
-                    <%= link_to 'LOG IN', new_account_session_path, class: "page-scroll btn btn-primary btn-lg outline" %>
+                    <%= link_to 'SIGN UP', new_account_registration_path, class: "page-scroll btn btn-primary btn-lg outline" %>
                 </li>
             </ul>
         </div>
