--- a/app/views/creatives/_contact.html.erb
+++ b/app/views/creatives/_contact.html.erb
@@ -4,8 +4,8 @@
             <h2 class="section-heading">How May We Help?</h2>
             <hr class="primary">
             <p>Instela is currently available all across London.</p>
-            <p>Send us a text and we will get back to you as soon as possible!</p>
-            <h2 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:+447454574821">07 45 45 74 821</a></h2>
+            <p>Send us a message to get started</p>
+            <%= link_to 'GET INSTANT HELP', '#', class: "btn btn-primary btn-xl page-scroll ", onclick:"event.preventDefault();openNSLauncher();"  %>
         </div>
     </div>
 </div>
