--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
 <header id="page-top" class='accounts_header'>
     <div class="header-content">
         <div class="container-fluid">
-            <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 registration_form">
+            <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
 <!--             Add style ect to css, need to remove p tag  -->
                 <br><br><br>
                 <h3 style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';">Sign Up To Order Services</h3>
@@ -50,7 +50,7 @@
                   <div id="stripeResponse"></div>
                   <p style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';font-size: 14px;">We only charge your credit card once a service has been delivered. <br><br>
                   <!-- <input type="checkbox" required name="terms"> -->
-                  By registering your details<br> you agree that you have read and accepted the <br><a href="/pages/terms" style="color:#eb3812; font-size:15px;">Terms and Conditions.</a></p>
+                  By registering your details you agree that you have read and accepted the <a href="/pages/terms" style="color:#eb3812; font-size:15px;">Terms and Conditions.</a></p>
                 <% end %>
             </div>
         </div>
