--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<!-- old -->
 <%= render 'navbar' %>
 <script src="https://checkout.stripe.com/checkout.js"></script>
 <script   src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
@@ -7,8 +8,6 @@
     <div class="header-content">
         <div class="container-fluid">
             <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-<!--             Add style ect to css, need to remove p tag  -->
-                <br><br><br>
                 <h3 style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';">Sign Up To Order Services</h3>
                 <p></p>
                 <%= form_for(resource, as: resource_name, validate: true, url: account_registration_path(resource_name)) do |f| %>
@@ -35,10 +34,11 @@
                     <%= f.text_field :mobile_phone, :required => true, placeholder: 'Mobile Phone Number', class: 'form-control' %>
                   </div>
                   <br>
-                  <button id="paymentButton" class= 'page-scroll btn btn-primary outline'>Add Payment Details</button>
-                  <br><br>
                   <div class="row">
-                    <div class="col-lg-4 col-lg-offset-4 col-md-2 col-md-offset-5  col-sm-2 col-sm-offset-5 col-xs-6 col-xs-offset-3" style="position:relative; bottom:0;">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6" style="position:relative; bottom:0;">
+                    <button id="paymentButton" class= 'page-scroll btn btn-primary outline'>CARD DETAILS</button>
+                    </div>
+                    <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4  col-sm-4 col-sm-offset-4 col-xs-5 col-xs-offset-1" style="position:relative; bottom:0;">
                     <%= link_to image_tag("accounts/light_solid.png", :class => 'img-responsive'), "https://stripe.com/about"%>
                     </div>
                     <br>
@@ -49,8 +49,7 @@
                   </div>
                   <div id="stripeResponse"></div>
                   <p style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';font-size: 14px;">We only charge your credit card once a service has been delivered. <br><br>
-                  <!-- <input type="checkbox" required name="terms"> -->
-                  By registering your details you agree that you have read and accepted the <a href="/pages/terms" style="color:#eb3812; font-size:15px;">Terms and Conditions.</a></p>
+                  By registering your details you agree that you have read and accepted the <a href="/pages/terms" style="color:white; font-size:15px; text-decoration: underline;">TERMS AND CONDITIONS</a>
                 <% end %>
             </div>
         </div>
