--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,21 +1,23 @@
 <%= render 'navbar' %>
-<script src="https://checkout.stripe.com/checkout.js"></script>                                
+<script src="https://checkout.stripe.com/checkout.js"></script>
 <script   src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
 <%= javascript_include_tag 'creative/registration' %>
-
 
 <header id="page-top" class='accounts_header'>
     <div class="header-content">
         <div class="container-fluid">
-            <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 registration_form">
-<!--             Add style ect to css, need to remove p tag  -->
-                <h3 style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';">Edit My Account Details</h3>
+            <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+                <h3 style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';">Edit my account details</h3>
                 <p></p>
                 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
                   <%= devise_error_messages! %>
                   <span class="payment-errors"></span>
+
                   <input type="hidden" name='payment_token' id="payment_token"/><br/>
-                  <input type='hidden' name='stripe_key' value="<%= Rails.application.secrets.stripe_publishable_key %>" /><br>  
+                  <input type='hidden' name='stripe_key' value="<%= Rails.application.secrets.stripe_publishable_key %>" />                     <input type='hidden' name='stripe_key' value="<%= Rails.application.secrets.stripe_publishable_key %>" /><br>
+
+
+
                   <div class="form-group">
                     <%= f.text_field :full_name, :required => true, placeholder: 'Full Name', class: 'form-control'%>
                   </div>
@@ -26,29 +28,32 @@
                     <%= f.email_field :email, :required => true, placeholder: 'Email', class: 'form-control' %>
                   </div>
                   <div class="form-group">
-                    <%= f.text_field :mobile_phone, :required => true, placeholder: 'Mobile Phone Number', class: 'form-control' %>
+                  <%= f.text_field :mobile_phone, :required => true, placeholder: 'Mobile Phone Number', class: 'form-control' %>
                   </div>
                   <div class="form-group">
-                    <%= f.label :new_password %> <i>(leave blank if you don't want to change it)</i><br />
+                   <%= f.label :new_password %> <i>(leave blank if you don't want to change it)</i><br />
                     <%= f.password_field :password, placeholder: 'New Password', class: 'form-control'  %>
                   </div>
                   <div class="form-group">
                     <%= f.password_field :password_confirmation, placeholder: 'New Password Confirmation', class: 'form-control'%>
                   </div>
                   <br>
-                  <button id="paymentButton" class= 'page-scroll btn btn-primary btn-lg outline'>Edit Payment Details</button>
-                  <br><br>
                   <div class="row">
-                    <div class="col-lg-4 col-lg-offset-4 col-md-2 col-md-offset-5  col-sm-2 col-sm-offset-5 col-xs-6 col-xs-offset-3">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6" style="position:relative; bottom:0;">
+                    <button id="paymentButton" class= 'page-scroll btn btn-primary btn-lg outline'>Edit Details</button>
+                    </div>
+                    <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4  col-sm-4 col-sm-offset-4 col-xs-5 col-xs-offset-1" style="position:relative; bottom:0;">
                     <%= link_to image_tag("accounts/light_solid.png", :class => 'img-responsive'), "https://stripe.com/about"%>
                     </div>
-                    <br><br>
+                    <br>
                   </div>
+                  <br>
                   <div class="form-group">
                     <%= f.submit 'UPDATE', class: 'page-scroll btn btn-primary btn-lg outline submit-account' %>
                   </div>
-                  <br>
                   <div id="stripeResponse"></div>
+                  <p style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';font-size: 14px;">We only charge your credit card once a service has been delivered. <br><br>
+                  By registering your details you agree that you have read and accepted the <a href="/pages/terms" style="color:white; font-size:15px; text-decoration: underline;">TERMS AND CONDITIONS</a>
                 <% end %>
             </div>
         </div>
@@ -58,43 +63,31 @@
 <%= render 'creatives/contact' %>
 <%= render 'creatives/footer' %>
 
-
-
 <% if false %>
-
   <h2>Edit <%= resource_name.to_s.humanize %></h2>
-
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= devise_error_messages! %>
-
     <div class="field">
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true %>
     </div>
-
     <div class="field">
       <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
       <%= f.password_field :password, autocomplete: "off" %>
     </div>
-
     <div class="field">
       <%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "off" %>
     </div>
-
     <div class="field">
       <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
       <%= f.password_field :current_password, autocomplete: "off" %>
     </div>
-
     <div class="actions">
       <%= f.submit "Update" %>
     </div>
   <% end %>
-
   <h3>Cancel my account</h3>
-
   <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
   <%= link_to "Back", :back %>
 <% end %>
