--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,16 +8,12 @@
         <div class="container-fluid">
             <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
                 <h3 style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';">Edit my account details</h3>
-                <p></p>
                 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
                   <%= devise_error_messages! %>
                   <span class="payment-errors"></span>
 
                   <input type="hidden" name='payment_token' id="payment_token"/><br/>
                   <input type='hidden' name='stripe_key' value="<%= Rails.application.secrets.stripe_publishable_key %>" />                     <input type='hidden' name='stripe_key' value="<%= Rails.application.secrets.stripe_publishable_key %>" /><br>
-
-
-
                   <div class="form-group">
                     <%= f.text_field :full_name, :required => true, placeholder: 'Full Name', class: 'form-control'%>
                   </div>
@@ -31,7 +27,8 @@
                   <%= f.text_field :mobile_phone, :required => true, placeholder: 'Mobile Phone Number', class: 'form-control' %>
                   </div>
                   <div class="form-group">
-                   <%= f.label :new_password %> <i>(leave blank if you don't want to change it)</i><br />
+                   <%= f.label :new_password %> <i>Leave blank if you don't want to change it</i>
+                   <br>
                     <%= f.password_field :password, placeholder: 'New Password', class: 'form-control'  %>
                   </div>
                   <div class="form-group">
@@ -52,8 +49,6 @@
                     <%= f.submit 'UPDATE', class: 'page-scroll btn btn-primary btn-lg outline submit-account' %>
                   </div>
                   <div id="stripeResponse"></div>
-                  <p style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';font-size: 14px;">We only charge your credit card once a service has been delivered. <br><br>
-                  By registering your details you agree that you have read and accepted the <a href="/pages/terms" style="color:white; font-size:15px; text-decoration: underline;">TERMS AND CONDITIONS</a>
                 <% end %>
             </div>
         </div>
