--- a/app/assets/javascripts/creative/registration.js.erb
+++ b/app/assets/javascripts/creative/registration.js.erb
@@ -15,7 +15,7 @@ $(document).ready(function() {
 		// Open Checkout with further options
 		handler.open({
 			name: 'Instela',
-			'panel-label': 'Add',
+			'panel-label': 'Add'
 		});
 		e.preventDefault();
 	});
