fix bugs and add address

--- a/app/views/creatives/_contact.html.erb
+++ b/app/views/creatives/_contact.html.erb
@@ -1,6 +1,12 @@
 <div id="contact">
     <div class="container text-center">
         <div class="call-to-action">
+        		<script type="text/javascript" charset="utf-8">
+              var openNSLauncher = function() {
+              var launcher = document.querySelector('.nudgespot-launcher');
+              launcher.click();
+              };
+            </script>
             <h2 class="section-heading">How May We Help?</h2>
             <hr class="primary">
             <p>Instela is currently available all across London.</p>
