--- a/app/views/creatives/_footer.html.erb
+++ b/app/views/creatives/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="container-fluid text-center">
-      Instela is a service provided by Instela Ltd, located in London, UK.<br><br>
+      Instela is a service provided by Instela Limited, company number 10086934, at 563 Chiswick High Road, London, W4 3AY.<br><br>
       <%= link_to 'Contact Us', contact_path, style:"font-size:10pt;color:#555" %>
       <span style="font-size:10pt;color:#555">|</span>
       <a href="https://docs.google.com/forms/d/1V1NAXNM41W30mEjl3PP4NY6ESZIxf6nlxV1YBLyQYxw/viewform" target="_blank" style="font-size:10pt;color:#555">Work With Us</a>
