--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -25,10 +25,10 @@
                         </div>
                     </div>
                     <div class="container-fluid key_text">
-                        <h2>Make Everything Work in Your Office</h2>
+                        <h2>Solve Any Office Problem. Now.</h2>
                         <br>
-                        <h4>Available on-demand all across London during weekdays from 9AM until 7PM</h4>
-                        <h4>Send us a message to get started</h4>
+                        <h4>Focus on your business and end all your office headaches. <br><br>Verified professional tech support, handymen, cleaners, available on-demand all across London.<br><br>Send us a message to get started.</h4>
+                        <!-- <h4>Send us a message to get started</h4> -->
                         <!-- <h1 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:+447454574821">07 45 45 74 821</a></h1> -->
                         <!-- <hr> -->
                         <hr>
