--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -36,7 +36,7 @@
                                 <hr>
                                 <%= link_to 'GET INSTANT HELP', '#', class: "btn btn-primary btn-xl page-scroll ", onclick:"event.preventDefault();openNSLauncher();"  %>
                                 <p></p>
-                            </div><
+                            </div>
                         </div>
                       </div>
                 </section>
